2021-07-16  Noah Sanci  <nsanci@redhat.com>

	PR28034
	* debuginfod-client.c (debuginfod_query_server): % escape filename
	so the completed url is processed properly.

2021-06-28 Noah Sanci <nsanci@redhat.com>

	PR25978
	* debuginfod.cxx (options): Added --fdcache-prefetch-fds/mbs options.
	(set_metric): Added a condition for fdcache_mintmp to ensure no
	negative percentages or percentages larger than 100% are given.
	(globals): Added fdcache_prefetch_mbs/fdcache_prefetch_fds.
	(set_metrics): Differentiate between lru and prefetch metrics.
	(intern): Added prefetch functionality for nuking preexisting copies
	and incrementing prefetch metrics.
	(lookup): Search prefetch cache and increment associated metrics. Upon
	finding in the prefetch cache move the element to the lru cache.
	(limit): Arguments updated. Update size of prefetch cache.
	(main): Log prefetch and cache fds/mbs

2021-07-06  Alice Zhang  <alizhang@redhat.com>

	PR27531
	* debuginfod-client.c (debuginfod_query_server): Retry failed queries
	if error code is not ENOENT.
	* debuginfod.h.in: Introduce DEBUGINFOD_RETRY_LIMIT_ENV_VAR.

2021-07-01  Noah Sanci <nsanci@redhat.com>

	PR27711
	* debuginfod.cxx (options): Add --regex-groom, -r option.
	(regex_groom): New static bool defaults to false.
	(parse_opt): Handle 'r' option by setting regex_groom to true.
	(groom): Introduce and use reg_include and reg_exclude.

2021-07-09  Noah Sanci  <nsanci@redhat.com>

	PR27983
	* debuginfod-client.c (debuginfod_query_server): As full-length
	urls are generated with standardized formats, ignore duplicates.
	Created out1 and changed out2 error gotos. Updated url creation print
	statements.
	(globals): Removed url_delim_char, as it was no longer used.

2021-06-18  Mark Wielaard  <mark@klomp.org>

	* debuginfod-client.c (debuginfod_begin): Don't use client if
	calloc call failed.

2021-06-03  Frank Ch. Eigler <fche@redhat.com>

	PR27863
	* debuginfod.cxx (unique_set, unique_set_reserver): New classes.